Fix font awesome loading error and make item form invisible by default

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -161,7 +161,10 @@ header {
   }
 }
 
-// LIST ITEM STYLES
+// ITEM STYLES
 .item_content {
   padding: 0;
+}
+.item-form {
+  display: none;
 }
